--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="page clearfix" index>
     <div class="left">
-        <h1>Welcome to HyG's Blog!</h1>
-        <small>这里记录着我的前端学习之路</small>
+        <h1>Welcome to wgd's Blog!</h1>
+        <small>这里记录着我的所写，所想，所感</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
